force-app/main/default/objects/WorkOrder_Data_Change__e/WorkOrder_Data_Change__e.object-meta.xml
<CustomObject>
    <label>WorkOrder Data Change</label>
    <pluralLabel>WorkOrder Data Changes</pluralLabel>
</CustomObject>