force-app/main/default/objects/WorkOrder_Data_Change__e/fields/ChangeActualId__c.field-meta.xml
<CustomField>
    <fullName>ChangeActualId__c</fullName>
    <label>Change Actual Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>