force-app/main/default/objects/WorkOrder_Data_Change__e/fields/ChangedObject__c.field-meta.xml
<CustomField>
    <fullName>ChangedObject__c</fullName>
    <label>Changed Object</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>