force-app/main/default/objects/WorkOrder_Data_Change__e/fields/ChangeType__c.field-meta.xml
<CustomField>
    <fullName>ChangeType__c</fullName>
    <label>Change Type</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>